traces/bug_708.txt
src/Graphics/ffglut.cpp:1157: error: DEAD_STORE
  The value written to &first (type _Bool) is never used.
Showing all 1 steps of the trace


src/Graphics/ffglut.cpp:1157:5: Write of unused value
1155.   {
1156.     //ffassert(p);
1157.       bool first = !theplot;
            ^
1158.       bool change = theplot != p;
1159.       theplot=p;
